# ClaudeCode2OpenAi

./: .gitignore  CLAUDE.md  README.md  __main__.py  config.yaml  main.py  pyproject.toml  requirements.txt  start.sh
src/: config.py
src/services/: backend_manager.py  claude_processor.py  context_manager.py  metrics.py  rate_limiter.py  request_logger.py
